imexerp-service/imex-erp-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imex-erp-service
  labels:
    app: imex-erp-service
  namespace: imexerp-prd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imex-erp-service
  template:
    metadata:
      labels:
        app: imex-erp-service
    spec:
      containers:
        - name: imex-erp-service
          image: ghcr.io/smlsoft/smljavawebservice:3.9.13
          # resources:
          #   requests:
          #     memory: "4096Mi"
          #     cpu: "4000m"
          #   limits:
          #     memory: "8192Mi"
          #     cpu: "5000m" 
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /SMLJavaWebService/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 90
          readinessProbe:
            httpGet:
              path: /SMLJavaWebService/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: imexerp-config-pvc
