imexerp-service/imex-erp-service-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imex-erp-service
  namespace: imexerp-prd
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: imex-erp-service
