imexerp-service/imex-erp-service-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: imex-erp-service
  namespace: imexerp-prd
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector: 
    app: imex-erp-service
