imexerp-service/imex-erp-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imex-erp-service
  namespace: imexerp-prd
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
  #   nginx.ingress.kubernetes.io/configuration-snippet: |
  #     proxy_set_header X-Script-Name /pgadmin4;
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /SMLJavawebService(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: imex-erp-service
                port:
                  number: 80
